# SNAP

./: .gitignore  CMakeLists.txt  CreateDispatch.sh  README  README.md  SNA.cpp  SNA.hpp  SNAP.cpp  SNAP.hpp  SNAPImplementation.cpp  SNAPImplementation.hpp  SNAPImplementationComputeDispatch.cpp  TABLE.cpp  TABLE.hpp  ZBL.cpp  ZBL.hpp  helper.hpp  kimspec.edn
